# kvikio

./: .clang-format  .codespellrc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  VERSION  aws_cert.source  build.sh  dependencies.yaml  pyproject.toml  rapids_config.cmake  s3_server.py
cpp/: CMakeLists.txt
cpp/benchmarks/: CMakeLists.txt  utils.cpp  utils.hpp
cpp/benchmarks/io/: common.cpp  common.hpp  sequential_benchmark.cpp  sequential_benchmark.hpp
cpp/benchmarks/local/: posix_benchmark.cpp  posix_benchmark.hpp
cpp/benchmarks/threadpool/: threadpool_benchmark.cpp
cpp/benchmarks/utils/: utils.cpp  utils.hpp
cpp/cmake/: config.json  fetch_rapids.cmake  rapids_config.cmake
cpp/cmake/Modules/: ConfigureCUDA.cmake  FindcuFile.cmake
cpp/cuobj_shim/: cuobj_shim.cpp
cpp/doxygen/: Doxyfile  main_page.md  rapids.css
cpp/examples/: CMakeLists.txt  basic_io.cpp  basic_no_cuda.cpp  mmap_io_host.cpp  s3_io.cpp
cpp/examples/downstream/: CMakeLists.txt  downstream_example.cpp
cpp/include/cufile/: buffer.hpp  default_thread_pool.hpp  driver.hpp  error.hpp  file_handle.hpp  nvml.hpp  parallel_operation.hpp  thread_pool.hpp  utils.hpp
cpp/include/kvikio/: aws_credential_provider.hpp  batch.hpp  bounce_buffer.hpp  buffer.hpp  compat_mode.hpp  compat_mode_manager.hpp  config.hpp  cufile_config.hpp  defaults.hpp  driver.hpp  env_var.hpp  error.hpp  file_handle.hpp  file_handle_rangelock.hpp  file_utils.hpp  function_wrapper.hpp  hdfs.hpp  http_status_codes.hpp  logger.hpp  mmap.hpp  nvml.hpp  nvtx.hpp  parallel_operation.hpp  posix_io.hpp  range_lock.hpp  remote_backend_type.hpp  remote_handle.hpp  shim.hpp  stream.hpp  thread_pool.hpp  threadpool_roundrobin.hpp  threadpool_simple.hpp  threadpool_wrapper.hpp  utils.hpp
cpp/nsys_plugins/nic/: CMakeLists.txt  kvikio_nic_nsys_plugin.cpp  nic_monitor.cpp  nic_monitor.hpp  nsys-plugin.yaml
cpp/scripts/: run-cmake-format.sh
cpp/src/: aws_credential_provider.cpp  batch.cpp  bounce_buffer.cpp  buffer.cpp  compat_mode.cpp  compat_mode_manager.cpp  defaults.cpp  error.cpp  file_handle.cpp  file_utils.cpp  hdfs.cpp  http_status_codes.cpp  logger.cpp  mmap.cpp  nvtx.cpp  posix_io.cpp  remote_handle.cpp  stream.cpp  threadpool_wrapper.cpp  utils.cpp  utils.hpp
cpp/src/cufile/: config.cpp  driver.cpp
cpp/src/detail/: bounce_buffer_cache.cpp  concurrent_request_limiter.cpp  context.cpp  env.cpp  event.cpp  file_handle_dep.cpp  io_event_barrier.cpp  io_uring.cpp  multi_poll_reactor.cpp  nvtx.cpp  posix_io.cpp  remote_callback.cpp  remote_handle.cpp  remote_handle_poll_based.cpp  stream.cpp  tls.cpp  url.cpp  utils.cpp
cpp/src/experimental/: nic_monitor.cpp
cpp/src/shim/: cuda.cpp  cufile.cpp  cuobj.cpp  libcurl.cpp  nvml.cpp  nvml.hpp  nvml_h_wrapper.hpp  utils.cpp  utils.hpp
cpp/tests/: CMakeLists.txt  biu.cpp  main.cpp  test_basic_io.cpp  test_bounce_buffer.cpp  test_bounce_buffer_cache.cpp  test_concurrent_request_limiter.cpp  test_defaults.cpp  test_detail_utils.cpp  test_error.cpp  test_event_pool.cpp  test_file_handle.cpp  test_file_utils.cpp  test_hdfs.cpp  test_io_event_barrier.cpp  test_mmap.cpp  test_multi_poll_reactor.cpp  test_nic_monitor.cpp  test_range_lock.cpp  test_remote_handle.cpp  test_roundrobin_threadpool.cpp  test_tls.cpp  test_url.cpp  test_utils.cpp  utils.hpp
cpp/tests/mock/: mock_file_handle_dep.hpp
cpp/tests/utils/: env.cpp  env.hpp  hdfs_helper.cpp  hdfs_helper.hpp  utils.hpp
legate/: CMakeLists.txt  pyproject.toml  setup.cfg  setup.py
legate/benchmarks/: hdf5_read.py  matmul_zarr.py  multi-node-io.py  single-node-io.py  zarr_read.py
legate/cpp/: CMakeLists.txt  legate_kvikio.cpp  legate_kvikio.hpp  legate_mapping.cpp  legate_mapping.hpp  task_opcodes.hpp  tile_io.cpp
legate/examples/: basic_io.py  hdf5_io.py  zarr_io.py
legate/legate_kvikio/: __init__.py  _version.py  core.py  cufile.py  kerchunk.py  library_description.py  tile.py  utils.py  zarr.py
legate/tests/: test_basic_io.py  test_kerchunk.py  test_zarr.py
python/: .coveragerc  .flake8  .flake8.cython  CMakeLists.txt  pyproject.toml  setup.cfg  setup.py  versioneer.py
python/benchmarks/: single-node-io.py  zarr-compressors.py  zarr-io.py
python/cli/: gpu_compressor.py
python/cmake/: CMakeLists.txt  kvikio_python_helpers.cmake
python/cufile/: __init__.py  _version.py  thread_pool.py  zarr.py
python/cufile/_lib/: __init__.py  arr.pyi  arr.pyx  cufile.pyi  cufile.pyx  cufile_cxx_api.pxd  libcufile.pyx
python/examples/: hello_world.py  zarr_cupy_nvcomp.py
python/gpu_compressor/: gpu_compressor.py
python/kvikio/: .coveragerc  .gitattributes  CMakeLists.txt  __init__.py  _version.py  config.py  cufile.py  defaults.py  numcodecs.py  numpy.py  nvcomp.py  nvcomp_codec.py  overload.py  pyproject.toml  test_batched_snappy.py  thread_pool.py  zarr.py
python/kvikio/_lib/: CMakeLists.txt  arr.pyx  kvikio_cxx_api.pxd  libkvikio.pyx  libnvcomp.pyx  libnvcomp_ll.pyx  nvcomp.pxd  nvcomp.pyx  nvcomp_cxx_api.pxd  nvcomp_ll_cxx_api.pxd  pynvcomp.pyx
python/kvikio/benchmarks/: zarr-io.py
python/kvikio/cli/: gpu_compressor.py
python/kvikio/cmake/: CMakeLists.txt
python/kvikio/examples/: aws_s3.py  hello_world.py  http_io.py  kvikio_stat.py  zarr_cupy_nvcomp.py
python/kvikio/kvikio/: __init__.py  _nvcomp_codec.py  _version.py  aws_credentials.py  buffer.py  cufile.py  cufile_driver.py  defaults.py  mmap.py  nsys.py  numcodecs.py  numpy.py  nvcomp.py  nvcomp_codec.py  remote_file.py  stream.py  utils.py  zarr.py  zarr_v3.py
python/kvikio/tests/: conftest.py  test_async_io.py  test_aws_s3.py  test_basic_io.py  test_benchmarks.py  test_cufile_driver.py  test_defaults.py  test_examples.py  test_hdfs_io.py  utils.py  (+14 more)
python/libkvikio/: .gitattributes  CMakeLists.txt  pyproject.toml
python/src/: arr.pxd  arr.pyi  arr.pyx  cufile.pyi  cufile.pyx  cufile_cxx_api.pxd
python/tests/: conftest.py  test_async_io.py  test_basic_io.py  test_benchmarks.py  test_defaults.py  test_examples.py  test_file.py  test_numpy.py  test_nvcomp.py  test_nvcomp_codec.py  test_overload.py  test_zarr.py
(+231 files in other folders)
