# Copyright (c) 2021-2022, NVIDIA CORPORATION. All rights reserved.
# See file LICENSE for terms.

[build-system]
requires = [
    "wheel",
    "setuptools",
    "Cython>=0.29,<0.30",
    "scikit-build>=0.13.1",
    "cmake>=3.23.1",
    "ninja",
]

[tool.black]
line-length = 88
target-version = ["py36"]
include = '\.py?$'
exclude = '''
/(
    thirdparty |
    \.eggs |
    \.git |
    \.hg |
    \.mypy_cache |
    \.tox |
    \.venv |
    _build |
    buck-out |
    build |
    dist |
    _skbuild
)/
'''
