# Copyright (c) 2018-2021, NVIDIA CORPORATION.

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.


[versioneer]
VCS = git
style = pep440
versionfile_source = kvikio/_version.py
versionfile_build = kvikio/_version.py
tag_prefix = v
parentdir_prefix = kvikio-

[isort]
line_length=88
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
order_by_type=True
known_rapids=
    nvtext
    cudf
    cuml
    cugraph
    dask_cudf
known_first_party=
    cufile
default_section=THIRDPARTY
sections=FUTURE,STDLIB,THIRDPARTY,RAPIDS,FIRSTPARTY,LOCALFOLDER
skip=
    thirdparty
    .eggs
    .git
    .hg
    .mypy_cache
    .tox
    .venv
    _build
    buck-out
    build
    dist
    __init__.py

[options]
packages = find:
python_requires = >=3.8,<3.10
