# Copyright (c) 2018-2023, NVIDIA CORPORATION.

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.


[versioneer]
VCS = git
style = pep440
versionfile_source = kvikio/_version.py
versionfile_build = kvikio/_version.py
tag_prefix = v
parentdir_prefix = kvikio-

[flake8]
filename = *.py, *.pyx, *.pxd, *.pxi
force-check = True
max-line-length = 88
exclude =
    .eggs,
    *.egg,
    build,
    docs,
    .git,
    versioneer.py,
    _version.py,
    _skbuild,
ignore =
    # line break before binary operator
    W503,
    # whitespace before :
    E203
per-file-ignores =
    # Ignore black/flake8-pyi conflicts
    *.pyi:E301 E302 E704
    # Rules ignored only in Cython:
    # E211: whitespace before '(' (used in multi-line imports)
    # E225: Missing whitespace around operators (breaks cython casting syntax like <int>)
    # E226: Missing whitespace around arithmetic operators (breaks cython pointer syntax like int*)
    # E227: Missing whitespace around bitwise or shift operator (Can also break casting syntax)
    # E275: Missing whitespace after keyword (Doesn't work with Cython except?)
    # E402: invalid syntax (works for Python, not Cython)
    # E999: invalid syntax (works for Python, not Cython)
    # W503: line break before binary operator (breaks lines that start with a pointer)
    # W504: line break after binary operator (breaks lines that end with a pointer)
    *.pyx: E211, E225, E226, E227, E275, E402, E999, W503, W504
    *.pxd: E211, E225, E226, E227, E275, E402, E999, W503, W504
    *.pxi: E211, E225, E226, E227, E275, E402, E999, W503, W504

[isort]
line_length=88
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
order_by_type=True
known_rapids=
    nvtext
    cudf
    cuml
    cugraph
    dask_cudf
known_first_party=
    cufile
    kvikio
default_section=THIRDPARTY
sections=FUTURE,STDLIB,THIRDPARTY,RAPIDS,FIRSTPARTY,LOCALFOLDER
skip=
    thirdparty
    .eggs
    .git
    .hg
    .mypy_cache
    .tox
    .venv
    _build
    buck-out
    build
    dist
    __init__.py

[options]
packages = find:
python_requires = >=3.9

[options.extras_require]
nvcomp =
    numpy >=1.20
    cupy >=9.5.0

[mypy]
ignore_missing_imports = True
